--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       - DEBUG=1
 
-db:
+postgres_data:
     image: postgres:latest
     environment:
       - POSTGRES_DB=${DB_NAME}
@@ -30,7 +30,7 @@ db:
       retries: 10
     volumes:
       - db_data:/var/lib/postgresql/data
-redis:
+redis_data:
   image: redis:latest
   ports:
     - "6379:6379"
